--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,46 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins|Indie+Flower|Fascinate+Inline|Lobster|Oswald');
 
 body {
-	background-color: #efefef;
+	background-color: #f4f4f4;
+}
+.container {
+	width: 100%;
 }
 /* navbar menu */
-#nav-top {
-	background-color: #efefef;
+#nav-menu {
 	width: 100%;
-	border-bottom: 0px;
+	margin-top: 0px;
+	padding-top: 0px;
+	padding-right: 40px;
+	margin-top: -40px;
 }
-#nav-bar {
-	border: none;
+#navbar a {
+	font-family: Oswald;
+	font-size: 20px;
+	color: #F89406;
 }
-span {
-	font-size: 14px;
-}
-
 /* title banner */
+.text-danger {
+	color: #ff0000;
+}
 #title-banner {
 	background-image: url("../img/pexels-photo-38125.jpeg");
 	background-size: 100%;
 	height: 600px;
-	padding-top: 200px;
-	border-top: 0px;
-	
+	border: none;	
 }
 #title-banner h1 {
-	color: #ffffff;
 	font-family: Poppins;
-	color: #e7dfdd;
+	font-size: 68px;
+	color: #F89406;
+	margin-top: 300px;
 }
 #title-banner p {
+	font-size: 35px;
 	color: #ffffff;
 	font-family: Poppins;
 }
 /* main content */
+.col-md-6 h2 {
+	font-color: #ffffff;
+}
