--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,8 @@ body {
 	background-image: url("../img/pexels-photo-38125.jpeg");
 	background-size: 100%;
 	height: 600px;
-	border: none;	
+	border: 0;
+	margin-bottom: 0px;	
 }
 #title-banner h1 {
 	font-family: Poppins;
@@ -41,6 +42,38 @@ body {
 	font-family: Poppins;
 }
 /* main content */
-.col-md-6 h2 {
-	font-color: #ffffff;
+#page-content .row {
+	height: 400px;
+	margin: 0px 0px 0px 0px;
+	padding-top: 50px;
+}
+#page-content #about {
+	width: 100%;
+	background-color: #f4decb;
+}
+#page-content #playlist {
+	width: 100%;
+	background-color: #f8eee7;
+}
+#page-content #contact {
+	width: 100%;
+	background-color: #ffffff;
+}
+#page-content h2 {
+	font-family: Oswald;
+	font-size: 48px;
+	color: #F89406;
+}
+#page-content p {
+	font-family: Poppins;
+	font-size: 28px;
+}
+#page-content hr {
+	color: #F89406;
+}
+/* footer */
+footer {
+	background-color: #94618E;
+	height: 300px;
+	margin-top: 0px;
 }
